--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <nav>
     <div class=""nav-container"">
         <div class="logo">SB</div>
-            <ul class=""nav-links"">
+            <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
