--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       <div class="about-text">
         <p>Hi, I'm a final-year ECE student passionate about building modern web applications through full stack development. I'm also keen on exploring AI and machine learning, and I aspire to pursue a MS in the future to deepen my expertise and work on impactful technologies.</p>
       </div>
+      
+      <section id="skills">
+        <h2 class="section-title">Skills</h2>
       <div class="skills-grid">
         <div class="skill-item">
           <h3>Modern Technologies</h3>
@@ -54,7 +57,7 @@
         </div>
         <div class="skill-item">
           <h3>Tools</h3>
-          <p>Git, VS Code, Figma</p>
+          <p>Git, VS Code</p>
         </div>
         <div class="skill-item">
           <h3>Learning</h3>
