--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <div class="about-text">
         <p>Hi, I'm a final-year ECE student passionate about building modern web applications through full stack development. I'm also keen on exploring AI and machine learning, and I aspire to pursue a MS in the future to deepen my expertise and work on impactful technologies.</p>
       </div>
+    </section>
       
       <section id="skills">
         <h2 class="section-title">Skills</h2>
