--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="skill-item">
           <h3>Database</h3>
-          <p>MongoDB, PostgreSQL</p>
+          <p>MongoDB, SQL</p>
         </div>
         <div class="skill-item">
           <h3>Tools</h3>
