--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -41,7 +42,7 @@
     <h2 class="section-title">About Me</h2>
     <div class="about-content">
       <div class="about-text">
-        <p>Hi, I'm a final-year ECE student passionate about building modern web applications through full stack development. I'm also keen on exploring AI and machine learning, and I aspire to pursue a MS in the future to deepen my expertise and work on impactful technologies.</p>
+        <p>Hi, I'm a final-year ECE student at Jaypee Institute of Information Technology, Noida. I'm passionate about building modern web applications through full stack development. I'm also keen on exploring AI and machine learning, and I aspire to pursue a MS in the future to deepen my expertise and work on impactful technologies.</p>
       </div>
     </section>
       
