changed project images

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
     <h2 class="section-title">Projects</h2>
     <div class="projects-grid">
       <div class="project-card">
-        <div class="project-image"></div>
+        <div class="project-image">
+          <img src="screenshots/Screenshot 2025-07-11 180851.png" alt="Codoc Image" />
+        </div>
         <div class="project-content">
           <h3>CoDoc</h3>
           <p>Google Docs inspired real-time collaborative text editor.</p>
@@ -91,7 +93,9 @@
       </div>
 
       <div class="project-card">
-        <div class="project-image"></div>
+        <div class="project-image">
+          <img src="screenshots/snappy.png" alt="Snappy Image" />
+        </div>
         <div class="project-content">
           <h3>Snappy</h3>
           <p>Chat Application</p>
